# simple-internets

./: .gitignore  README.md  gi  pyproject.toml
simple_internets/: main.py
